syntax = "proto3";
package YouYou.Proto;

//获取路径点
message NS2GS_Vector3
{
	float x = 1;//
	float y = 2;//
	float z = 3;//
}

//获取路径点
message NS2GS_ReturnNavPath
{
	int64 TaskId = 1; //任务编号
    bool Valid = 2;//有效
    repeated NS2GS_Vector3 Path = 3;//路径
}